--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: faker_app_flutter_firebase
 description: A new Flutter project.
-publish_to: 'none' 
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: ">=3.2.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -13,8 +13,8 @@ dependencies:
   flutter_riverpod: 2.4.6
   go_router: 12.1.1
   equatable: 2.0.5
-  firebase_core: 2.22.0
-  firebase_auth: 4.14.0
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.17.5
   firebase_ui_auth: 1.10.0
 
 dev_dependencies:
