--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_core: ^2.25.4
   firebase_auth: ^4.17.5
   firebase_ui_auth: 1.10.0
+  cloud_firestore: ^4.15.5
 
 dev_dependencies:
   flutter_test:
