--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,12 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: 1.0.6
-  flutter_riverpod: 2.4.6
-  go_router: 12.1.1
+  flutter_riverpod: ^2.4.10
+  go_router: ^13.2.0
   equatable: 2.0.5
-  firebase_core: 2.22.0
-  firebase_auth: 4.14.0
-  firebase_ui_auth: 1.10.0
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.17.5
+  firebase_ui_auth: ^1.13.0
 
 dev_dependencies:
   flutter_test:
